# bot-lib-bot-template

./: Dockerfile  pyproject.toml  run.py
project_name/: app.py  bot.py  handler.py  lib.py
