[tool.poetry]
name = "project-name"
version = "0.0.1"
description = ""
authors = ["Petr Lavrov <calmmage@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0" # ugly because of langchain
# for stability, use frozen-app-name branch
#calmlib = { git = "https://github.com/calmmage/calmlib.git", branch = "main" }
bot-lib = { git = "https://github.com/calmmage/bot-lib.git", branch = "main" }
calmapp = { git = "https://github.com/calmmage/calmapp.git", branch = "main" }
pytest = "*"
loguru = "*"
toml = "*"
#tgcrypto = "^1.2.5"
mtprotocrypt = "1.2.6.5b0"
python-levenshtein = "^0.25.1"

[tool.poetry.group.dev.dependencies]
jupyter = ">=1.0.0"
jupyter-nbextensions-configurator = "*"
jupyter_contrib_nbextensions = "*"
tqdm = "*"
black = "*"
pre-commit = "*"
# temporary hacks because I messed up the dependencies
langchain-anthropic = "*"
langchain-openai = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[template]
version = "0.1.3"
# update python version to 3.12 in pyproject.toml and docker,
# use app.run() for run.py
url = "https://github.com/calmmage/bot-lib-bot-template.git"
author = "Petr Lavrov <petrlavrov@calmmage.com>"
description = "A template for creating a bot using calmapp and bot-lib"
